<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    displayName="@string/extension_name"
    icon="@drawable/ic_extension"
    id="my-karoo-extension"
    scansDevices="false">
    <DataType
        typeId="rear-cog-teeth"
        description="@string/rear_cog_teeth_description"
        displayName="@string/rear_cog_teeth_name"
        graphical="true"
        icon="@drawable/ic_extension" />
    <DataType
        typeId="climber-field-1"
        description="@string/climber_field_1_description"
        displayName="@string/climber_field_1_name"
        graphical="true"
        icon="@drawable/ic_extension" />
    <DataType
        typeId="climber-field-2"
        description="@string/climber_field_2_description"
        displayName="@string/climber_field_2_name"
        graphical="true"
        icon="@drawable/ic_extension" />
</ExtensionInfo>
